controller and route creation

--- a/back-end/config/config.json
+++ b/back-end/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "bezawit122112",
+    "password": "12345678",
     "database": "epayment",
     "host": "localhost",
     "dialect": "mysql"
