--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
+    "firebase": "^10.4.0",
     "html2canvas": "^1.4.1",
     "https-browserify": "^1.0.0",
     "jspdf": "^2.5.1",
