--- a/back-end/config/config.json
+++ b/back-end/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "12345678",
-    "database": "mpayment",
+    "database": "epayment",
     "host": "localhost",
     "dialect": "mysql"
   },
